Added git LFS to mamba/conda installation.

--- a/notebooks/preprocessing/Employment-data-cleaning.ipynb
+++ b/notebooks/preprocessing/Employment-data-cleaning.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T19:45:03.027764Z",
-     "start_time": "2025-11-12T19:45:03.025926Z"
+     "end_time": "2025-11-13T09:40:15.559071Z",
+     "start_time": "2025-11-13T09:40:15.304252Z"
     }
    },
    "cell_type": "code",
@@ -28,7 +28,7 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "from src.python.Functions import describe_dataframes, remove_columns\n",
+    "from src.python.Functions import describe_dataframes, remove_columns, check_and_pull_git_lfs\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join('..', '..', 'src', 'python')))\n",
     "from Functions import *\n",
@@ -36,7 +36,7 @@
    ],
    "id": "da21eae88c265fa6",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -47,19 +47,37 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-12T19:45:01.658646Z",
-     "start_time": "2025-11-12T19:45:01.655793Z"
+     "end_time": "2025-11-13T10:07:23.936488Z",
+     "start_time": "2025-11-13T10:07:23.881659Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Importing the data:\n",
-    "\n",
-    "employment2024 = read_large_file('../../data/raw/firm-employment-data/monthly-2024.json', 'json')\n"
+    "check_and_pull_git_lfs()\n",
+    "#employment2024 = read_large_file('../../data/raw/firm-employment-data/monthly-2024.json', 'json')\n"
    ],
    "id": "83ae9cfc0366b94d",
-   "outputs": [],
-   "execution_count": 8
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Git LFS files need downloading\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {},
