Added export to csv for dataframes without YoY changes of variables.

--- a/notebooks/preprocessing/Variable-creation.ipynb
+++ b/notebooks/preprocessing/Variable-creation.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:46:24.034653Z",
-     "start_time": "2025-11-18T18:46:23.788217Z"
+     "end_time": "2025-11-18T19:27:21.409338Z",
+     "start_time": "2025-11-18T19:27:21.171847Z"
     }
    },
    "cell_type": "code",
@@ -50,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:46:52.522467Z",
-     "start_time": "2025-11-18T18:46:41.353277Z"
+     "end_time": "2025-11-18T19:27:32.767369Z",
+     "start_time": "2025-11-18T19:27:21.415261Z"
     }
    },
    "cell_type": "code",
@@ -169,15 +169,25 @@
       "Concatenating 13 chunks...\n",
       "Finished reading. Total rows: 125097\n",
       "Reading CSV file from: ../../data/interim/joined-balance-and-PnL-no-filler/all-ja_kodas/full_financial_year/Merged2022_full_financial_year_all.csv\n",
-      "File size: 1.35 MB\n",
+      "File size: 11.91 MB\n",
       "Auto-detecting CSV delimiter...\n",
       "Delimiter detection scores: {',': 16.0}\n",
       "Detected delimiter: ',' (score: 16.00)\n",
       "Bad lines handling: error\n",
       "File encoding: utf-8\n",
-      "Processed chunk 1 with 9979 rows (total: 9979)\n",
-      "Concatenating 1 chunks...\n",
-      "Finished reading. Total rows: 9979\n",
+      "Processed chunk 1 with 10000 rows (total: 10000)\n",
+      "Processed chunk 2 with 10000 rows (total: 20000)\n",
+      "Processed chunk 3 with 10000 rows (total: 30000)\n",
+      "Processed chunk 4 with 10000 rows (total: 40000)\n",
+      "Processed chunk 5 with 10000 rows (total: 50000)\n",
+      "Processed chunk 6 with 10000 rows (total: 60000)\n",
+      "Processed chunk 7 with 10000 rows (total: 70000)\n",
+      "Processed chunk 8 with 10000 rows (total: 80000)\n",
+      "Processed chunk 9 with 10000 rows (total: 90000)\n",
+      "Processed chunk 10 with 10000 rows (total: 100000)\n",
+      "Processed chunk 11 with 7033 rows (total: 107033)\n",
+      "Concatenating 11 chunks...\n",
+      "Finished reading. Total rows: 107033\n",
       "Reading CSV file from: ../../data/interim/joined-balance-and-PnL-no-filler/all-ja_kodas/full_financial_year/Merged2021_full_financial_year_all.csv\n",
       "File size: 13.90 MB\n",
       "Auto-detecting CSV delimiter...\n",
@@ -281,15 +291,15 @@
       "Concatenating 11 chunks...\n",
       "Finished reading. Total rows: 105929\n",
       "Reading CSV file from: ../../data/interim/joined-balance-and-PnL-no-filler/only-matching-ja_kodas/full_financial_year/Merged2022_full_financial_year_matching.csv\n",
-      "File size: 1.13 MB\n",
+      "File size: 0.98 MB\n",
       "Auto-detecting CSV delimiter...\n",
       "Delimiter detection scores: {',': 16.0}\n",
       "Detected delimiter: ',' (score: 16.00)\n",
       "Bad lines handling: error\n",
       "File encoding: utf-8\n",
-      "Processed chunk 1 with 7937 rows (total: 7937)\n",
+      "Processed chunk 1 with 6911 rows (total: 6911)\n",
       "Concatenating 1 chunks...\n",
-      "Finished reading. Total rows: 7937\n",
+      "Finished reading. Total rows: 6911\n",
       "Reading CSV file from: ../../data/interim/joined-balance-and-PnL-no-filler/only-matching-ja_kodas/full_financial_year/Merged2021_full_financial_year_matching.csv\n",
       "File size: 13.00 MB\n",
       "Auto-detecting CSV delimiter...\n",
@@ -597,8 +607,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:47:15.721130Z",
-     "start_time": "2025-11-18T18:47:15.388823Z"
+     "end_time": "2025-11-18T19:27:33.213483Z",
+     "start_time": "2025-11-18T19:27:32.881207Z"
     }
    },
    "cell_type": "code",
@@ -663,8 +673,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:28:27.768567Z",
-     "start_time": "2025-11-18T18:28:27.166999Z"
+     "end_time": "2025-11-18T19:27:33.690078Z",
+     "start_time": "2025-11-18T19:27:33.220914Z"
     }
    },
    "cell_type": "code",
@@ -967,8 +977,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:28:31.385812Z",
-     "start_time": "2025-11-18T18:28:27.780235Z"
+     "end_time": "2025-11-18T19:27:35.597348Z",
+     "start_time": "2025-11-18T19:27:33.699466Z"
     }
    },
    "cell_type": "code",
@@ -1102,8 +1112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:28:31.636766Z",
-     "start_time": "2025-11-18T18:28:31.590661Z"
+     "end_time": "2025-11-18T19:27:35.759623Z",
+     "start_time": "2025-11-18T19:27:35.738086Z"
     }
    },
    "cell_type": "code",
@@ -1135,8 +1145,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:28:38.720525Z",
-     "start_time": "2025-11-18T18:28:31.683285Z"
+     "end_time": "2025-11-18T19:27:38.775467Z",
+     "start_time": "2025-11-18T19:27:35.799781Z"
     }
    },
    "cell_type": "code",
@@ -1338,13 +1348,13 @@
       "Pair 2: Successfully merged. Shapes: (125097, 20) + (222198, 3) -> (125097, 22)\n",
       "\n",
       "--- Pair 3 Merge Diagnostics ---\n",
-      "DF1: 9979 rows, 9979 unique ja_kodas\n",
+      "DF1: 107033 rows, 107033 unique ja_kodas\n",
       "DF2: 222198 rows, 222198 unique ja_kodas\n",
-      "Common ja_kodas: 9192\n",
+      "Common ja_kodas: 102196\n",
       "Merge type: left\n",
-      "Expected result rows: 9979\n",
-      "Actual result rows: 9979\n",
-      "Pair 3: Successfully merged. Shapes: (9979, 20) + (222198, 3) -> (9979, 22)\n",
+      "Expected result rows: 107033\n",
+      "Actual result rows: 107033\n",
+      "Pair 3: Successfully merged. Shapes: (107033, 20) + (222198, 3) -> (107033, 22)\n",
       "\n",
       "--- Pair 4 Merge Diagnostics ---\n",
       "DF1: 94514 rows, 94514 unique ja_kodas\n",
@@ -1408,13 +1418,13 @@
       "Pair 2: Successfully merged. Shapes: (105929, 20) + (222198, 3) -> (105929, 22)\n",
       "\n",
       "--- Pair 3 Merge Diagnostics ---\n",
-      "DF1: 7937 rows, 7937 unique ja_kodas\n",
+      "DF1: 6911 rows, 6911 unique ja_kodas\n",
       "DF2: 222198 rows, 222198 unique ja_kodas\n",
-      "Common ja_kodas: 7261\n",
+      "Common ja_kodas: 6416\n",
       "Merge type: left\n",
-      "Expected result rows: 7937\n",
-      "Actual result rows: 7937\n",
-      "Pair 3: Successfully merged. Shapes: (7937, 20) + (222198, 3) -> (7937, 22)\n",
+      "Expected result rows: 6911\n",
+      "Actual result rows: 6911\n",
+      "Pair 3: Successfully merged. Shapes: (6911, 20) + (222198, 3) -> (6911, 22)\n",
       "\n",
       "--- Pair 4 Merge Diagnostics ---\n",
       "DF1: 86395 rows, 86395 unique ja_kodas\n",
@@ -1451,8 +1461,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:31:08.819067Z",
-     "start_time": "2025-11-18T18:31:08.184294Z"
+     "end_time": "2025-11-18T19:27:39.415469Z",
+     "start_time": "2025-11-18T19:27:38.939779Z"
     }
    },
    "cell_type": "code",
@@ -1475,31 +1485,28 @@
     "\n",
     "order = ['identifier', 'company_info', 'dates', 'assets', 'financial_liabilities', 'income', 'profitability', 'ratios']\n",
     "\n",
-    "rearrange_columns_smart(\n",
+    "NFAJKA_with_address = rearrange_columns_smart(\n",
     "    NFAJKA_with_address,\n",
     "    patterns=patterns,\n",
     "    priority_cols=['ja_kodas', 'ja_pavadinimas'],  # Put these first within identifier group\n",
     "    group_order=order,\n",
-    "    inplace=True\n",
     ")\n",
     "\n",
-    "rearrange_columns_smart(\n",
+    "NFAJKM_with_address = rearrange_columns_smart(\n",
     "    NFAJKM_with_address,\n",
     "    patterns=patterns,\n",
     "    priority_cols=['ja_kodas', 'ja_pavadinimas'],  # Put these first within identifier group\n",
     "    group_order=order,\n",
-    "    inplace=True\n",
     ")\n",
     "\n",
-    "rearrange_columns_smart(\n",
+    "FFAJKA_rearranged = rearrange_columns_smart(\n",
     "    FFAJKA_with_address,\n",
     "    patterns=patterns,\n",
     "    priority_cols=['ja_kodas', 'ja_pavadinimas'],  # Put these first within identifier group\n",
     "    group_order=order,\n",
-    "    inplace=True\n",
     ")\n",
     "\n",
-    "FFAJKA_rearranged = rearrange_columns_smart(\n",
+    "FFAJKM_rearranged = rearrange_columns_smart(\n",
     "    FFAJKM_with_address,\n",
     "    patterns=patterns,\n",
     "    priority_cols=['ja_kodas', 'ja_pavadinimas'],  # Put these first within identifier group\n",
@@ -1508,7 +1515,7 @@
    ],
    "id": "138da41d4b648957",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -1519,14 +1526,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Saving dataframes to an xlsx workbook\n",
+   "source": "### Saving dataframes without YoY change to csv files\n",
    "id": "54780d375dda3748"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T18:28:39.391487Z",
-     "start_time": "2025-11-18T18:28:39.389299Z"
+     "end_time": "2025-11-18T19:28:01.031640Z",
+     "start_time": "2025-11-18T19:27:39.426468Z"
     }
    },
    "cell_type": "code",
@@ -1534,17 +1541,66 @@
     "\n",
     "# Saving dataframes\n",
     "\n",
-    "save_df_list_to_csv_auto()"
+    "## FFAJKA\n",
+    "\n",
+    "Full_Financial_Year_All_ja_kodas_2025 = FFAJKA_rearranged[0]\n",
+    "Full_Financial_Year_All_ja_kodas_2024 = FFAJKA_rearranged[1]\n",
+    "Full_Financial_Year_All_ja_kodas_2023 = FFAJKA_rearranged[2]\n",
+    "Full_Financial_Year_All_ja_kodas_2022 = FFAJKA_rearranged[3]\n",
+    "Full_Financial_Year_All_ja_kodas_2021 = FFAJKA_rearranged[4]\n",
+    "Full_Financial_Year_All_ja_kodas_2020 = FFAJKA_rearranged[5]\n",
+    "\n",
+    "save_df_list_to_csv_auto(FFAJKA_rearranged, '../../data/processed/Financial-tables/No-YoY-change/Full-financial-year/All-ja_kodas')\n",
+    "\n",
+    "## FFAJKM\n",
+    "\n",
+    "Full_Financial_Year_Matching_ja_kodas_2025 = FFAJKM_rearranged[0]\n",
+    "Full_Financial_Year_Matching_ja_kodas_2024 = FFAJKM_rearranged[1]\n",
+    "Full_Financial_Year_Matching_ja_kodas_2023 = FFAJKM_rearranged[2]\n",
+    "Full_Financial_Year_Matching_ja_kodas_2022 = FFAJKM_rearranged[3]\n",
+    "Full_Financial_Year_Matching_ja_kodas_2021 = FFAJKM_rearranged[4]\n",
+    "Full_Financial_Year_Matching_ja_kodas_2020 = FFAJKM_rearranged[5]\n",
+    "\n",
+    "save_df_list_to_csv_auto(FFAJKM_rearranged, '../../data/processed/Financial-tables/No-YoY-change/Full-financial-year/Only-matching-ja_kodas')\n",
+    "\n",
+    "## NFAJKA\n",
+    "\n",
+    "New_Firms_All_ja_kodas_2025 = NFAJKA_with_address[0]\n",
+    "New_Firms_All_ja_kodas_2024 = NFAJKA_with_address[1]\n",
+    "New_Firms_All_ja_kodas_2023 = NFAJKA_with_address[2]\n",
+    "New_Firms_All_ja_kodas_2022 = NFAJKA_with_address[3]\n",
+    "New_Firms_All_ja_kodas_2021 = NFAJKA_with_address[4]\n",
+    "New_Firms_All_ja_kodas_2020 = NFAJKA_with_address[5]\n",
+    "\n",
+    "save_df_list_to_csv_auto(NFAJKA_with_address, '../../data/processed/Financial-tables/No-YoY-change/With-new-firms/All-ja_kodas')\n",
+    "\n",
+    "## NFAJKM\n",
+    "\n",
+    "New_Firms_Matching_ja_kodas_2025 = NFAJKM_with_address[0]\n",
+    "New_Firms_Matching_ja_kodas_2024 = NFAJKM_with_address[1]\n",
+    "New_Firms_Matching_ja_kodas_2023 = NFAJKM_with_address[2]\n",
+    "New_Firms_Matching_ja_kodas_2022 = NFAJKM_with_address[3]\n",
+    "New_Firms_Matching_ja_kodas_2021 = NFAJKM_with_address[4]\n",
+    "New_Firms_Matching_ja_kodas_2020 = NFAJKM_with_address[5]\n",
+    "\n",
+    "save_df_list_to_csv_auto(NFAJKM_with_address, '../../data/processed/Financial-tables/No-YoY-change/With-new-firms/Only-matching-ja_kodas')"
    ],
    "id": "d17168b02c1110b9",
    "outputs": [
     {
-     "ename": "_IncompleteInputError",
-     "evalue": "incomplete input (3289694069.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Cell \u001B[0;32mIn[9], line 5\u001B[0;36m\u001B[0m\n\u001B[0;31m    \u001B[0m\n\u001B[0m    ^\u001B[0m\n\u001B[0;31m_IncompleteInputError\u001B[0m\u001B[0;31m:\u001B[0m incomplete input\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['New_Firms_Matching_ja_kodas_2025',\n",
+       " 'New_Firms_Matching_ja_kodas_2024',\n",
+       " 'New_Firms_Matching_ja_kodas_2023',\n",
+       " 'New_Firms_Matching_ja_kodas_2022',\n",
+       " 'New_Firms_Matching_ja_kodas_2021',\n",
+       " 'New_Firms_Matching_ja_kodas_2020']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "execution_count": 9
